syntax = "proto3";

option go_package = "./internal/proto";

package user;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message User {
	string id = 1;
	string first_name = 2;
	string last_name = 3;
	string nickname = 4;
	string password = 5;
	string email = 6;
	string country = 7;
	google.protobuf.Timestamp created_at = 8;
	google.protobuf.Timestamp updated_at = 9;
}

message CreateUserRequest {
	User user = 1;
}

message UpdateUserRequest {
	User user = 1;
}

message DeleteUserRequest {
	string id = 1;
}

message GetUserRequest {
	string id = 1;
}

message ListUsersRequest {
	string country = 1;
	int32 page = 2;
	int32 page_size = 3;
}

message ListUsersResponse {
	repeated User users = 1;
}

service UserService {
	rpc CreateUser(CreateUserRequest) returns (User);
	rpc UpdateUser(UpdateUserRequest) returns (User);
	rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
	rpc GetUser(GetUserRequest) returns (User);
	rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}
